crates/gridwell-writer-svg/tests/snapshots/snapshots__source-notes.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="192" height="106" viewBox="0 0 192 106">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Metric</tspan></text>
<text x="78.12" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Value</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">Users</text>
<text x="78.12" y="50.9" font-size="14px" xml:space="preserve">1,024</text>
<line x1="0" y1="32" x2="70.12" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="70.12" y1="32" x2="134.4" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="70.12" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="70.12" y1="60" x2="134.4" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="134.4" y2="32" stroke="#333333" stroke-width="1.5"/>
<text x="8" y="76.5" font-size="11.9px" xml:space="preserve">Source: internal analytics.</text>
<text x="8" y="95.16" font-size="11.9px" xml:space="preserve">Collected June 2026.</text>
</svg>
