crates/gridwell-writer-svg/tests/snapshots/snapshots__striping-basic.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="105" height="152" viewBox="0 0 105 152">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<rect x="0" y="60" width="34.92" height="28" fill="rgba(128, 128, 128, 0.051)"/>
<rect x="34.92" y="60" width="34.92" height="28" fill="rgba(128, 128, 128, 0.051)"/>
<rect x="69.84" y="60" width="34.92" height="28" fill="rgba(128, 128, 128, 0.051)"/>
<rect x="0" y="116" width="34.92" height="28" fill="rgba(128, 128, 128, 0.051)"/>
<rect x="34.92" y="116" width="34.92" height="28" fill="rgba(128, 128, 128, 0.051)"/>
<rect x="69.84" y="116" width="34.92" height="28" fill="rgba(128, 128, 128, 0.051)"/>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">A</tspan></text>
<text x="42.92" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">B</tspan></text>
<text x="77.84" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">C</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">1</text>
<text x="42.92" y="50.9" font-size="14px" xml:space="preserve">2</text>
<text x="77.84" y="50.9" font-size="14px" xml:space="preserve">3</text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve">4</text>
<text x="42.92" y="78.9" font-size="14px" xml:space="preserve">5</text>
<text x="77.84" y="78.9" font-size="14px" xml:space="preserve">6</text>
<text x="8" y="106.9" font-size="14px" xml:space="preserve">7</text>
<text x="42.92" y="106.9" font-size="14px" xml:space="preserve">8</text>
<text x="77.84" y="106.9" font-size="14px" xml:space="preserve">9</text>
<text x="8" y="134.9" font-size="14px" xml:space="preserve">10</text>
<text x="42.92" y="134.9" font-size="14px" xml:space="preserve">11</text>
<text x="77.84" y="134.9" font-size="14px" xml:space="preserve">12</text>
<line x1="0" y1="32" x2="34.92" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="34.92" y1="32" x2="69.84" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="69.84" y1="32" x2="104.76" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="34.92" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="34.92" y1="60" x2="69.84" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="69.84" y1="60" x2="104.76" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="34.92" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="34.92" y1="88" x2="69.84" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="69.84" y1="88" x2="104.76" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="116" x2="34.92" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="34.92" y1="116" x2="69.84" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="69.84" y1="116" x2="104.76" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="144" x2="34.92" y2="144" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="34.92" y1="144" x2="69.84" y2="144" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="69.84" y1="144" x2="104.76" y2="144" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="104.76" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
