crates/gridwell-writer-svg/tests/snapshots/snapshots__style-composition.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="135" height="96" viewBox="0 0 135 96">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<rect x="0" y="60" width="73.08" height="28" fill="#f1c40f"/>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Key</tspan></text>
<text x="81.08" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Value</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">normal</text>
<text x="81.08" y="50.9" font-size="14px" xml:space="preserve">42</text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold" fill="#2c3e50">special</tspan></text>
<text x="81.08" y="78.9" font-size="14px" xml:space="preserve">99</text>
<line x1="0" y1="32" x2="73.08" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="73.08" y1="32" x2="134.86" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="73.08" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="73.08" y1="60" x2="134.86" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="73.08" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="73.08" y1="88" x2="134.86" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="134.86" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
