crates/gridwell-writer-svg/tests/snapshots/snapshots__text-format.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="394" height="180" viewBox="0 0 394 180">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Format</tspan></text>
<text x="118.76" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Sample</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">underline</text>
<text x="118.76" y="50.9" font-size="14px" xml:space="preserve">Underlined</text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve">line-through</text>
<text x="118.76" y="78.9" font-size="14px" xml:space="preserve">Struck out</text>
<text x="8" y="106.9" font-size="14px" xml:space="preserve">18px</text>
<text x="118.76" y="106.9" font-size="14px" xml:space="preserve">Larger text</text>
<text x="8" y="134.9" font-size="14px" xml:space="preserve">smaller</text>
<text x="118.76" y="134.9" font-size="14px" xml:space="preserve">Smaller text</text>
<text x="8" y="162.9" font-size="14px" xml:space="preserve">inline</text>
<text x="118.76" y="162.9" font-size="14px" xml:space="preserve">Plain, underlined, struck and large</text>
<line x1="0" y1="32" x2="110.76" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="110.76" y1="32" x2="393.74" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="110.76" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="110.76" y1="60" x2="393.74" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="110.76" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="110.76" y1="88" x2="393.74" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="116" x2="110.76" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="110.76" y1="116" x2="393.74" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="144" x2="110.76" y2="144" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="110.76" y1="144" x2="393.74" y2="144" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="172" x2="110.76" y2="172" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="110.76" y1="172" x2="393.74" y2="172" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="393.74" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
